# Love_Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.txt
agent/: __init__.py  loveflow_client.py  main.py
agent/core/: __init__.py  checkpoint.py  context.py  engine.py  memory.py  scheduler.py  system_prompt.py  task_tracker.py
agent/extensions/: __init__.py
agent/integration/: __init__.py  api_connector.py  protocol_adapters.py  webhook.py
agent/perception/: __init__.py  camera.py  face_recognition.py  network_discovery.py  system_monitor.py
agent/self_mod/: __init__.py  code_engine.py  dependency_manager.py  module_loader.py
agent/training/: __init__.py  data_collector.py  data_manager.py  monitor.py  orchestrator.py
config/: agent_config.py
